# Job-AI-Auto-Apply-UI

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  PERFORMANCE.md  README.md  pyproject.toml  ruff.toml  temp.js
src/: config.py  (+6 more)
web_ui/backend/: .env.example  .gitignore  __init__.py  app.py  config.py  pyproject.toml  pytest.ini  requirements.txt
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/: Local State  SingletonCookie  SingletonLock  SingletonSocket
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/Default/: .org.chromium.Chromium.cQCy1c  Cookies  Cookies-journal  DIPS  DIPS-wal  Extension Activity  Favicons  Favicons-journal  History  History-journal  Network Persistent State  Preferences  Reporting and NEL  Reporting and NEL-journal  TransportSecurity  Web Data
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/Default/DawnGraphiteCache/: index
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/Default/DawnWebGPUCache/: index
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/Default/Extension Rules/: LOG  LOG.old
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/Default/Extension Scripts/: LOG  LOG.old
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/Default/Extension State/: LOG  LOG.old
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/Default/GCM Store/: LOG  LOG.old
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/Default/GPUCache/: data_0  data_1  data_2  index
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/Default/Session Storage/: LOG  LOG.old
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/Default/Sessions/: Session_13406502498333045  Session_13406502527623860  Tabs_13406502502109610  Tabs_13406502527821912
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/Default/Site Characteristics Database/: LOG  LOG.old
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/Default/WebStorage/: QuotaManager  QuotaManager-journal
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/GrShaderCache/: data_0  data_1  index
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/GraphiteDawnCache/: index
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/ShaderCache/: data_0  data_1  index
web_ui/backend/data/browser_profiles/michael_scott_parkin_iii/segmentation_platform/: ukm_db
web_ui/backend/data/queues/: michael_scott_parkin_iii.json  test.json
web_ui/backend/data/run-config/: michael_scott_parkin_iii.json  test.json
web_ui/backend/models/: command.py  events.py  profile.py  queue_models.py  settings.py
web_ui/backend/routes/: apply.py  discover.py  profiles.py  queues.py  settings.py  websockets.py
web_ui/backend/src/: __init__.py  app.py
web_ui/backend/src/api/: routes.py
web_ui/backend/src/api/v1/: apply.py  discover.py
web_ui/backend/src/models/: __init__.py  application.py  config.py
web_ui/backend/src/services/: __init__.py  artifact_service.py  cli_service.py  profile_service.py  queue_service.py  run_config_service.py  settings_service.py
web_ui/backend/src/utils/: __init__.py  file_ops.py
web_ui/backend/tests/: __init__.py  conftest.py  test_queue_service.py
web_ui/backend/tests/contract/: test_api_contracts.py  test_apply_contracts.py  test_discovery_contracts.py  test_profiles_settings_contracts.py
web_ui/backend/tests/integration/: test_api_cli_integration.py  test_cli_logging.py  test_cli_subprocess.py  test_workflows.py
web_ui/backend/tests/unit/: test_apply_service.py  test_artifact_service.py  test_queue_service.py  test_run_config_service.py  test_settings_service.py
(+458 files in other folders)
