[project]
name = "job-ai-auto-apply-ui"
version = "0.0.1"
description = "CLI assistant to discover Lever postings and auto-apply with supervised mode"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "jsonschema>=4.21.1",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "structlog>=24.1.0",
  "browser-use>=0.7.0",
  "playwright>=1.45.0"
]

[project.scripts]
auto-apply = "src.orchestrator:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

